<resources>
    <string name="app_name">TournamentManager</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="men">Men</string>
    <string name="women">Women</string>
    <string name="button_message">Go</string>
    <string name="rounds">Rounds</string>
    <string name="teams">Teams</string>
    <string name="team_size">Team Size</string>
    <string name="save">Save</string>
    <string name="button_next">Next Round</string>
    <string name="button_prev">Previous</string>
    <string name="title_activity_results_activity2">ResultsActivity2</string>
    <string name="vs">vs</string>
    <string name="byes_title">Byes</string>
    <string name="accept_warning">Go Back</string>
    <string name="cancel">Cancel</string>
    <string name="email">Email Results</string>
    <string name="send_mail">Send</string>
    <string name="email_hint">Enter your email</string>

</resources>
