<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="20dp">

        <TextView
            android:id="@+id/num_rounds_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rounds"
            android:textSize="@dimen/label_text_size"
            android:paddingRight="20dp" />
        <EditText
            android:id="@+id/num_rounds"
            android:inputType="number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background"
            android:selectAllOnFocus="true"
            android:maxLength="2"
            android:imeOptions="actionDone" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginBottom="20dp">

        <TextView
            android:id="@+id/num_teams_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/teams"
            android:textSize="@dimen/label_text_size"
            android:paddingRight="20dp" />
        <EditText
            android:id="@+id/num_teams"
            android:inputType="number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background"
            android:selectAllOnFocus="true"
            android:maxLength="2"
            android:imeOptions="actionDone" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="80dp">

        <TextView
            android:id="@+id/team_size_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/team_size"
            android:textSize="@dimen/label_text_size"
            android:paddingRight="20dp" />
        <EditText
            android:id="@+id/team_size"
            android:inputType="number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background"
            android:selectAllOnFocus="true"
            android:digits="23456"
            android:maxLength="1"
            android:imeOptions="actionDone" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginBottom="50dp">

        <Button
            android:id="@+id/save_button"
            android:text="@string/save"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/button_height"
            android:onClick="onSave" />

    </LinearLayout>

</LinearLayout>