<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:focusableInTouchMode="true" tools:context=".MainActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:layout_marginRight="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_large">

        <TextView
            android:id="@+id/num_men_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/men"
            android:textSize="@dimen/label_text_size"
            android:paddingRight="20dp" />
        <EditText
            android:id="@+id/num_men"
            android:inputType="number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background"
            android:selectAllOnFocus="true"
            android:maxLength="2"
            android:imeOptions="actionDone" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:layout_marginRight="@dimen/margin_large"
        android:layout_marginBottom="@dimen/margin_large">

        <TextView
            android:id="@+id/num_women_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/women"
            android:textSize="@dimen/label_text_size"
            android:paddingRight="20dp" />
        <EditText
            android:id="@+id/num_women"
            android:inputType="number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background"
            android:selectAllOnFocus="true"
            android:maxLength="2" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:layout_marginRight="@dimen/margin_large"
        android:layout_marginLeft="@dimen/margin_large">

        <Button
            android:id="@+id/start_button"
            android:text="@string/button_message"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/button_height"
            android:onClick="onStartPairings" />

    </LinearLayout>

</LinearLayout>
